Upd2 index.html

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
         // --- INICIO DEL JUEGO ---
         startButton.addEventListener('click', async () => {
-            if (API_KEY === 'AIzaSyChi5JFIvBbptGqSe67cIoU_49RtfX__ew' || API_KEY === '') {
+            if (API_KEY === 'PON_TU_API_KEY_AQUI' || API_KEY === '') {
                 showError("Error: Falta la Clave de API. Edita el código para agregarla.");
                 return;
             }
